# msep

./: .gitignore  README.md  core.py  entropy.py  pathways.py  plotting.py  pyproject.toml
.github/workflows/: tests.yml
msep/: __init__.py  bayesian.py  coordination.py  datasets.py  pathways.py  perturbation.py  result.py  scoring.py
notebooks/: README.md
notebooks/figures/: README.md  figure2_paradox.ipynb  figure3_pan_cancer.ipynb  figure4_perturbation.ipynb  figure5_xbp1.ipynb  figure6_bulk_validation.ipynb
notebooks/quickstart/: quickstart_colab.ipynb
plan/: GB_SUBMISSION_WORKPLAN.md  log.md
tests/: test_datasets.py  test_msep.py
